Fixing crucial bugs in the web client: fixing not being able to select a step with a click after some time in Google Chrome (workaround by setting the clickThreshold to 1, as the library sometimes recognises a mousemove of 1px, even when the mouse hasn't been moved), fixing a bug to set the iid to steps.length + 1 (the wrong variable has been used, the wrong $scope.iid was instead of the correct var iid), fixing bug of not initialised step variables by calling updateStepVariables after loading a template from the server. Fixing display bug on the login page (login page displayed a scrollbar on an otherwise empty screen, workaround with using #login{margin-bottom: -100%});
Adding necessary feature: prevent users from using init functions in commands (by adding a new filter to app.js -> noInitProperty)

--- a/src/webclient/dashboard.css
+++ b/src/webclient/dashboard.css
@@ -93,6 +93,10 @@ html, body, #main-container, #main-row, #main{
     overflow: auto;
 }
 
+#login{
+    margin-bottom: -100%;  /* fix for scrollbar appearing on the login page */
+}
+
 /*
  * Placeholder dashboard ideas
  */
